# iso2god-redux

./: .gitignore  README.md  index.html  package.json
.github/workflows/: publish.yml
src/: Interfaces.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Button.tsx  Header.tsx  Panel.tsx  ProgressBar.tsx  Table.tsx
src/screens/: MainScreen.tsx  SelectIsoScreen.tsx
src/stores/: IsoStore.ts  ProgressStore.ts
src/styles/: MainScreen.css
src/windows/: SelectIso.ts
