[package]
name = "ISO2GOD-Redux"
version = "0.1.2"
description = "A Tauri MainScreen"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iso2god_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
iso2god = { git = "https://github.com/iliazeus/iso2god-rs.git" }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2.8.0"
anyhow = "1.0.102"
serde_repr = "0.1"
log = "0.4.29"
